// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<IncidentContainer /> rendering should render correctly 1`] = `
<Fragment>
  <PageHeader
    className=""
    title="Meldingen"
  />
  <IncidentOverviewPage__OverviewPage>
    <Column
      debug={false}
      debugColor="rgba(51,102,153,0.5)"
      order={0}
      push={0}
      span={3}
      wrap={false}
    >
      <Component
        categories={Object {}}
        filter={Object {}}
        incidentsCount={666}
        onMainCategoryFilterSelectionChanged={[MockFunction]}
        onRequestIncidents={
          [MockFunction] {
            "calls": Array [
              Array [
                Object {},
              ],
            ],
            "results": Array [
              Object {
                "isThrow": false,
                "value": undefined,
              },
            ],
          }
        }
      />
    </Column>
    <Column
      debug={false}
      debugColor="rgba(51,102,153,0.5)"
      order={0}
      push={0}
      span={9}
      wrap={true}
    >
      <Column
        debug={false}
        debugColor="rgba(51,102,153,0.5)"
        order={0}
        push={0}
        span={9}
        wrap={false}
      >
        <Component
          incidentSelected={[MockFunction]}
          incidents={Array []}
          incidentsCount={666}
          onRequestIncidents={
            [MockFunction] {
              "calls": Array [
                Array [
                  Object {},
                ],
              ],
              "results": Array [
                Object {
                  "isThrow": false,
                  "value": undefined,
                },
              ],
            }
          }
        />
      </Column>
      <Column
        debug={false}
        debugColor="rgba(51,102,153,0.5)"
        order={0}
        push={0}
        span={9}
        wrap={false}
      >
        <Component
          onRequestIncidents={
            [MockFunction] {
              "calls": Array [
                Array [
                  Object {},
                ],
              ],
              "results": Array [
                Object {
                  "isThrow": false,
                  "value": undefined,
                },
              ],
            }
          }
          page={3}
        />
      </Column>
    </Column>
  </IncidentOverviewPage__OverviewPage>
</Fragment>
`;

exports[`<IncidentContainer /> rendering should render loader correctly 1`] = `
<Fragment>
  <PageHeader
    className=""
    title="Meldingen"
  />
  <IncidentOverviewPage__OverviewPage>
    <Column
      debug={false}
      debugColor="rgba(51,102,153,0.5)"
      order={0}
      push={0}
      span={3}
      wrap={false}
    >
      <Component
        categories={Object {}}
        filter={Object {}}
        incidentsCount={666}
        onMainCategoryFilterSelectionChanged={[MockFunction]}
        onRequestIncidents={
          [MockFunction] {
            "calls": Array [
              Array [
                Object {},
              ],
            ],
            "results": Array [
              Object {
                "isThrow": false,
                "value": undefined,
              },
            ],
          }
        }
      />
    </Column>
    <Column
      debug={false}
      debugColor="rgba(51,102,153,0.5)"
      order={0}
      push={0}
      span={9}
      wrap={true}
    >
      <Column
        debug={false}
        debugColor="rgba(51,102,153,0.5)"
        order={0}
        push={0}
        span={9}
        wrap={false}
      >
        <LoadingIndicator />
      </Column>
      <Column
        debug={false}
        debugColor="rgba(51,102,153,0.5)"
        order={0}
        push={0}
        span={9}
        wrap={false}
      >
        <Component
          onRequestIncidents={
            [MockFunction] {
              "calls": Array [
                Array [
                  Object {},
                ],
              ],
              "results": Array [
                Object {
                  "isThrow": false,
                  "value": undefined,
                },
              ],
            }
          }
          page={3}
        />
      </Column>
    </Column>
  </IncidentOverviewPage__OverviewPage>
</Fragment>
`;
